fixed button visibility

--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ tr{
   margin: 0;
   min-height: 1rem;
   padding: calc(.875rem - 1px) calc(1.5rem - 1px);
-  position: relative;
+  
   text-decoration: none;
   transition: all 250ms;
   user-select: none;
@@ -203,12 +203,11 @@ tr{
   vertical-align: baseline;
   width: auto;
 }
-
 .button-6:hover,
 .button-6:focus {
-  border-color: rgba(0, 0, 0, 0.15);
-  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
-  color: rgba(0, 0, 0, 0.65);
+  border-color: black;
+  box-shadow: black 0 4px 12px;
+  color: black;
 }
 
 .button-6:hover {
@@ -217,18 +216,18 @@ tr{
 
 .button-6:active {
   background-color: #F0F0F1;
-  border-color: rgba(0, 0, 0, 0.15);
-  box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
-  color: rgba(0, 0, 0, 0.65);
+  border-color: black;
+  box-shadow: black 0 2px 4px;
+  color: black;
   transform: translateY(0);
 }
+
+
+
+
 h4{
   white-space: pre-line;
 }
-
-
-
-
 
 ul.vijestiIspis {
   display: flex;
@@ -360,6 +359,7 @@ select {
 .footer ul li {
   margin: 0 10px;
 }
+
 
 
 @media (max-width: 1055px) {
